--- a/components/SphereHUD/SphereHUD.module.css
+++ b/components/SphereHUD/SphereHUD.module.css
@@ -168,10 +168,23 @@
 
 @media (max-width: 480px) {
   .canvasWrapper {
-    height: 85vh;
+    height: 65vh;
   }
 
   .loadingState {
-    height: 85vh;
+    height: 65vh;
+  }
+
+  .hudOverlay {
+    padding: 8px 10px;
+  }
+
+  .hudTitle {
+    font-size: 0.65rem;
+  }
+
+  .filterBtn {
+    font-size: 0.55rem;
+    padding: 3px 6px;
   }
 }
